add faker, jest, eslint dependencies.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.0.1",
   "description": "this will be sooooo cool",
   "main": "index.js",
-  "scripts": {},
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "lint": "eslint **/*.js",
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "eslint": "^5.16.0",
+    "faker": "^4.1.0",
+    "jest": "^24.8.0"
+  }
 }
