--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest --verbose --coverage",
     "test-watch": "jest --watchAll --verbose --coverage"
   },
-  "author": "",
+  "author": "Matt Wilkin",
   "license": "ISC",
   "dependencies": {
     "eslint": "^5.16.0",
