--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "eslint": "^5.16.0",
     "faker": "^4.1.0",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "lint": "^1.1.2"
   }
 }
